Añadido la sidebar, configurado fondos de sesiones - (by Julio & Llauna)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     -->
     <link rel="manifest" href="manifest.webapp" />
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Ranga" rel="stylesheet">
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
 </head>
