--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
     -->
     <link rel="manifest" href="manifest.webapp" />
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Ranga" rel="stylesheet">
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
